# outilsia

./: .gitattributes  .gitignore  README.md  SECURITY.md
.github/workflows/: local-cockpit-cross-platform-beta.yml  local-cockpit-linux-beta.yml  local-cockpit-machine-replay.yml  local-cockpit-windows-beta.yml
handoffs/: MISSION-FABLE-LOCAL-COCKPIT-POST-RUST-WSL-20260706.md
local-cockpit-app/: NOTICE-UTILISATION-WORKSTACK.md  README.md  ROADMAP.md  package-lock.json  package.json
local-cockpit-app/forgebench/: signal-maze-v1.json
local-cockpit-app/scripts/: advance-goal-100.mjs  assemble-field-tests.mjs  build-linux-beta.sh  build-windows-beta.ps1  deploy-beta-release.mjs  generate-catalog-signals.mjs  generate-field-entry-from-windows-recipe.mjs  generate-outilsia-icons.py  generate-windows-native-recipe.mjs  import-beta-artifact.mjs  import-field-tests.mjs  import-windows-recipe.mjs  install-linux-tauri-deps.sh  make-field-test-kit.mjs  (+109 more)
local-cockpit-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
local-cockpit-app/src-tauri/src/: agent_adapter_policy.rs  board_observer.rs  capability_router.rs  evidence_ledger.rs  forgebench.rs  forgebench_browser.rs  forgebench_candidate.rs  forgebench_garden.rs  forgebench_garden_vault.rs  forgebench_hidden.rs  forgebench_isolation.rs  forgebench_runner.rs  forgebench_runtime.rs  forgebench_sandbox.rs  forgebench_vault.rs  lib.rs  local_capability_bridge.rs  main.rs  workstack_arena.rs  workstack_composer.rs  workstack_review.rs
scripts/: monitor_local_cockpit_seo.py  sync_local_cockpit_download_page.mjs
(+41 files in other folders)
