[package]
name = "outilsia-local-cockpit"
version = "0.1.1"
description = "OutilsIA Local Cockpit desktop app"
edition = "2021"
license = "UNLICENSED"

[lib]
name = "outilsia_local_cockpit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
getrandom = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.31"
tauri = { version = "2", features = [] }
time = "=0.3.41"
